// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullRuleHeader guidance links and the containing parenthesis are not rendered without guidance 1`] = `
<React.Fragment>
  <div
    className="rule-detail"
  >
    <div>
      <span
        aria-hidden="true"
      >
        <OutcomeChip
          count={1}
          outcomeType="fail"
        />
      </span>
       
      <span
        className="rule-details-id"
      >
        <NewTabLink
          aria-describedby="failed-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </NewTabLink>
      </span>
      : 
      <span
        className="rule-details-description"
        id="failed-rule-rule id-description"
      >
        rule description
      </span>
      <GuidanceTags
        deps={{}}
        links={null}
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`FullRuleHeader renders, outcomeType = fail 1`] = `
<React.Fragment>
  <div
    className="rule-detail"
  >
    <div>
      <span
        aria-hidden="true"
      >
        <OutcomeChip
          count={1}
          outcomeType="fail"
        />
      </span>
       
      <span
        className="rule-details-id"
      >
        <NewTabLink
          aria-describedby="failed-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </NewTabLink>
      </span>
      : 
      <span
        className="rule-details-description"
        id="failed-rule-rule id-description"
      >
        rule description
      </span>
      <React.Fragment>
        (
        <GuidanceLinks
          links={
            [
              {
                "href": "url://guidance-01.link",
                "text": "guidance-01",
              },
              {
                "href": "url://guidance-02.link",
                "text": "guidance-02",
              },
            ]
          }
        />
        )
      </React.Fragment>
      <GuidanceTags
        deps={{}}
        links={
          [
            {
              "href": "url://guidance-01.link",
              "text": "guidance-01",
            },
            {
              "href": "url://guidance-02.link",
              "text": "guidance-02",
            },
          ]
        }
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`FullRuleHeader renders, outcomeType = inapplicable 1`] = `
<React.Fragment>
  <div
    className="rule-detail"
  >
    <div>
       
      <span
        className="rule-details-id"
      >
        <NewTabLink
          aria-describedby="not-applicable-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </NewTabLink>
      </span>
      : 
      <span
        className="rule-details-description"
        id="not-applicable-rule-rule id-description"
      >
        rule description
      </span>
      <React.Fragment>
        (
        <GuidanceLinks
          links={
            [
              {
                "href": "url://guidance-01.link",
                "text": "guidance-01",
              },
              {
                "href": "url://guidance-02.link",
                "text": "guidance-02",
              },
            ]
          }
        />
        )
      </React.Fragment>
      <GuidanceTags
        deps={{}}
        links={
          [
            {
              "href": "url://guidance-01.link",
              "text": "guidance-01",
            },
            {
              "href": "url://guidance-02.link",
              "text": "guidance-02",
            },
          ]
        }
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`FullRuleHeader renders, outcomeType = incomplete 1`] = `
<React.Fragment>
  <div
    className="rule-detail"
  >
    <div>
       
      <span
        className="rule-details-id"
      >
        <NewTabLink
          aria-describedby="incomplete-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </NewTabLink>
      </span>
      : 
      <span
        className="rule-details-description"
        id="incomplete-rule-rule id-description"
      >
        rule description
      </span>
      <React.Fragment>
        (
        <GuidanceLinks
          links={
            [
              {
                "href": "url://guidance-01.link",
                "text": "guidance-01",
              },
              {
                "href": "url://guidance-02.link",
                "text": "guidance-02",
              },
            ]
          }
        />
        )
      </React.Fragment>
      <GuidanceTags
        deps={{}}
        links={
          [
            {
              "href": "url://guidance-01.link",
              "text": "guidance-01",
            },
            {
              "href": "url://guidance-02.link",
              "text": "guidance-02",
            },
          ]
        }
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`FullRuleHeader renders, outcomeType = pass 1`] = `
<React.Fragment>
  <div
    className="rule-detail"
  >
    <div>
       
      <span
        className="rule-details-id"
      >
        <NewTabLink
          aria-describedby="passed-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </NewTabLink>
      </span>
      : 
      <span
        className="rule-details-description"
        id="passed-rule-rule id-description"
      >
        rule description
      </span>
      <React.Fragment>
        (
        <GuidanceLinks
          links={
            [
              {
                "href": "url://guidance-01.link",
                "text": "guidance-01",
              },
              {
                "href": "url://guidance-02.link",
                "text": "guidance-02",
              },
            ]
          }
        />
        )
      </React.Fragment>
      <GuidanceTags
        deps={{}}
        links={
          [
            {
              "href": "url://guidance-01.link",
              "text": "guidance-01",
            },
            {
              "href": "url://guidance-02.link",
              "text": "guidance-02",
            },
          ]
        }
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`FullRuleHeader renders, outcomeType = review 1`] = `
<React.Fragment>
  <div
    className="rule-detail"
  >
    <div>
       
      <span
        className="rule-details-id"
      >
        <NewTabLink
          aria-describedby="needs-review-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </NewTabLink>
      </span>
      : 
      <span
        className="rule-details-description"
        id="needs-review-rule-rule id-description"
      >
        rule description
      </span>
      <React.Fragment>
        (
        <GuidanceLinks
          links={
            [
              {
                "href": "url://guidance-01.link",
                "text": "guidance-01",
              },
              {
                "href": "url://guidance-02.link",
                "text": "guidance-02",
              },
            ]
          }
        />
        )
      </React.Fragment>
      <GuidanceTags
        deps={{}}
        links={
          [
            {
              "href": "url://guidance-01.link",
              "text": "guidance-01",
            },
            {
              "href": "url://guidance-02.link",
              "text": "guidance-02",
            },
          ]
        }
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`FullRuleHeader ruleId is displayed as text when there is no url provided for a link 1`] = `
<React.Fragment>
  <div
    className="rule-detail"
  >
    <div>
      <span
        aria-hidden="true"
      >
        <OutcomeChip
          count={1}
          outcomeType="fail"
        />
      </span>
       
      <span
        className="rule-details-id"
      >
        <React.Fragment>
          rule id
        </React.Fragment>
      </span>
      : 
      <span
        className="rule-details-description"
        id="failed-rule-rule id-description"
      >
        rule description
      </span>
      <React.Fragment>
        (
        <GuidanceLinks
          links={
            [
              {
                "href": "url://guidance-01.link",
                "text": "guidance-01",
              },
              {
                "href": "url://guidance-02.link",
                "text": "guidance-02",
              },
            ]
          }
        />
        )
      </React.Fragment>
      <GuidanceTags
        deps={{}}
        links={
          [
            {
              "href": "url://guidance-01.link",
              "text": "guidance-01",
            },
            {
              "href": "url://guidance-02.link",
              "text": "guidance-02",
            },
          ]
        }
      />
    </div>
  </div>
</React.Fragment>
`;
